/*
 * $Id:$
 */

/* Use this format for the entry headers:
 * YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Name or Username and/or <your_email@address>
 * For example:
 * 2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */

2018-07-20 21:50 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\include\i_altsyntax.ch
   * core\include\i_image.ch
     + ON RCLICK, MCLICK, RDBLCLICK and MDBLCLICK clauses.
   * core\source\h_image.prg
     + DATAs bOnDblClick, bOnMClick, bOnMDblClick, bOnRClick
       and bOnRDblClick.
     + METHODs OnDblClick, OnMClick, OnMDblClick, OnRClick
       and OnRDblClick.

2018-07-20 20:12 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\include\i_altsyntax.ch
   * core\include\i_browse.ch
   * core\include\i_grid.ch
   * core\include\i_windefs.ch
   * core\include\i_xbrowse.ch
   * core\source\h_browse.prg
   * core\source\h_grid.prg
     + DATA lNoHSB to CLASS TGrid().
   * core\source\h_xbrowse.prg
     + NOHSCROLLBAR clause to GRID, XBROWSE and BROWSE controls.

2018-07-16 21:56 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.

2018-07-16 21:56 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\source\bostaurus.hbp
   * core\source\hbprinter.hbp
   * core\source\miniprint.hbp
   * core\source\oohg.hbp
     * .hbx files are now create at include folder.

2018-07-16 21:46 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.

2018-07-16 21:45 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\source\h_print.prg
   * core\source\miniprint.prg
     * Function TextAlign renamed as _HMG_PRINTER_TextAlign.
     * Function CreateThumbnails renamed as _HMG_PRINTER_CreateThumbnails.
     * Function CVSSetTextAlign renamed as _HMG_PRINTER_SetTextAlign.

2018-07-16 21:44 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\source\h_edit.prg
     * Functions ABMListado, ABMListadoEvento and ABMListadoImprimir
       are now static.